Fix double scrollbars on some pages with sidebars.

--- a/frontend/public/components/cluster-settings/_cluster-settings.scss
+++ b/frontend/public/components/cluster-settings/_cluster-settings.scss
@@ -21,8 +21,6 @@
 .co-p-cluster__sidebar {
   flex: 0 2 350px;
   min-width: 340px;
-  overflow-x: hidden;
-  overflow-y: auto;
 }
 
 .co-p-cluster__sidebar--bordered {
